// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationService should return a token session 1`] = `
{
  "id": "1234-1234",
  "name": "Foo Token",
  "roles": [],
  "token": "1234",
  "type": "token",
}
`;

exports[`AuthenticationService should return a token session 2`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return a token session 3`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "1234",
          "12345",
        ],
      },
    },
  },
]
`;

exports[`AuthenticationService should return a user session 1`] = `
{
  "createdAt": undefined,
  "expiresAt": undefined,
  "id": undefined,
  "roles": [],
  "token": undefined,
  "type": "user",
  "user": {
    "id": "12345",
  },
}
`;

exports[`AuthenticationService should return a user session 2`] = `
[
  {
    "include": {
      "user": {
        "select": {
          "active": true,
          "address": true,
          "birthday": true,
          "createdAt": true,
          "email": true,
          "emailVerifiedAt": true,
          "firstName": true,
          "flair": true,
          "id": true,
          "lastLogin": true,
          "modifiedAt": true,
          "name": true,
          "note": true,
          "password": false,
          "paymentProviderCustomers": true,
          "properties": true,
          "roleIDs": true,
          "userImageID": true,
        },
      },
    },
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return a user session 3`] = `
[
  {
    "where": {
      "id": {
        "in": undefined,
      },
    },
  },
]
`;

exports[`AuthenticationService should return null if user can't be found 1`] = `
[
  {
    "include": {
      "user": {
        "select": {
          "active": true,
          "address": true,
          "birthday": true,
          "createdAt": true,
          "email": true,
          "emailVerifiedAt": true,
          "firstName": true,
          "flair": true,
          "id": true,
          "lastLogin": true,
          "modifiedAt": true,
          "name": true,
          "note": true,
          "password": false,
          "paymentProviderCustomers": true,
          "properties": true,
          "roleIDs": true,
          "userImageID": true,
        },
      },
    },
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return null if user can't be found 2`] = `undefined`;
